[doc] Add documentation around EL 10 support
Change-Id: I8402672d0496e0c4b2c4c641597dda7596390cba
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/deploy-guide/source/supported-platforms.html
+++ b/deploy-guide/source/supported-platforms.html
@@ -2,4 +2,5 @@
   <li>Ubuntu Server 24.04 (Noble Numbat) 64-bit</li>
   <li>Debian 12 64-bit</li>
   <li>CentOS 10 Stream 64-bit</li>
+  <li>Rocky Linux 10 64-bit</li>
 </ul>
