--- a/deploy-guide/source/supported-platforms.html
+++ b/deploy-guide/source/supported-platforms.html
@@ -1,6 +1,7 @@
 <ul>
   <li>Ubuntu Server 24.04 (Noble Numbat) 64-bit</li>
-  <li>Debian 12 64-bit</li>
+  <li>Debian 12 (Bookworm) 64-bit</li>
+  <li>Debian 13 (Trixie) 64-bit</li>
   <li>CentOS 10 Stream 64-bit</li>
   <li>Rocky Linux 10 64-bit</li>
 </ul>
